Request is a dev dep

--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   "author": "Carlos Rodriguez <carlos@s8f.org> (http://s8f.org/)",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "*"
-  },
-  "dependencies": {
+    "mocha": "*",
     "request": "~2.9.203"
   }
 }
